--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -6,5 +6,6 @@
   </h2>
   <p>
     <img src={{ post.image }} alt="" width="30%" height=auto style="float: left; margin-right: 15px;">
-    {{ post.content | strip_html | truncatewords:30 }}</p>
+    {{ post.content | strip_html | truncatewords:50 }}</p>
 </div>
+<hr style="clear:both;">
