--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -5,8 +5,8 @@
     <a class="link-primary" title="{{ post.url | prepend: site.baseurl }}" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
   </h2>
   <p>
-    <img src={{ post.image }} alt="" width="30%" height=auto style="float: left; margin-right: 15px;" href="{{ post.url | prepend: site.baseurl }}">
+    <img src={{ post.image }} alt="" width="30%" height=auto style="float: left; margin-right: 15px;" href="{{ post.url | prepend: site.baseurl }}" hspace="20">
     {{ post.content | strip_html | truncatewords:50 }}</p>
 </div>
-<br>
+
 <hr style="clear:both;">
