--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@
       </header>
 
       <div class="container mx-auto px-2 py-4">
-        {% for post in site.posts %}
+        {% for post in site.categories.projects.posts %}
           {% include post_block.html %}
         {% endfor %}
       </div>
