--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,5 +17,6 @@ layout: default
   {% for post in site.posts %}
     {% if post.tags contains page.tag-name %}
       {% include post_block.html %}
+      {% endif %}
   {% endfor %}
 </div>
