--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,9 +45,6 @@
                 <div class="inline-block mt-3 mr-1">
                   {% include dot.html %}
                 </div>
-                <div class="inline-block mt-3">
-                  {% include {{ site.social_link | default: "twitter" }}.html %}
-                </div>
             </div>
           </div>
 
@@ -55,8 +52,10 @@
       </header>
 
       <div class="container mx-auto px-2 py-4">
-        {% for post in site.categories.projects %}
-          {% include post_block.html %}
+        {% for post in site.posts %}
+          {% if post.tags contains "project_home" %}
+            {% include post_block.html %}
+          {% endif %}
         {% endfor %}
       </div>
 
