--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,8 +8,6 @@
         "theme-{{ site.theme_color | default: "black" }}.scss"
 ;
 
-div{
-
-        margin-top: 10px;
-        
-}
+//div{
+//        margin-top: 10px;      
+//}
