--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ layout: default
 
 <div class="container mx-auto px-2 py-2 clearfix">
   {% for post in site.posts %}
-    {% if post.tags contains page.tags %}
+    {% if post.tags contains page.category %}
       {% include post_block.html %}
-      {% endif %}
+    {% endif %}
   {% endfor %}
 </div>
