--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,9 +13,9 @@ layout: default
 
 </article>
 
-<div class="container mx-auto px-2 py-2 clearfix">
+<div class="container mx-auto px-2 py-4">
   {% for post in site.posts %}
-    {% if post.tags contains page.category %}
+    {% if post.tags == page.category %}
       {% include post_block.html %}
     {% endif %}
   {% endfor %}
