--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 
 <div class="container mx-auto px-2 py-4">
   {% for post in site.posts %}
-    {% if post.tags == page.category %}
+    {% if post.category contains page.category %}
       {% include post_block.html %}
     {% endif %}
   {% endfor %}
