--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,3 +26,5 @@ layout: default
     {% endif %}
   {% endfor %}
 </div>
+
+<h2 class="h0 col-9 sm-width-full py-4 mt-3 inline-block" itemprop="name headline">More post about this project:</h2>
