--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,4 +27,4 @@ layout: default
   {% endfor %}
 </div>
 
-<h2 class="h0 col-9 sm-width-full py-4 mt-3 inline-block" itemprop="name headline">More post about this project:</h2>
+<h2 class="h1 lh-condensed col-9 mt-0">More post about this project:</h2>
