--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,9 @@ layout: default
   </div>
 
 </article>
+<div class="container px-2 mx-auto mb4"></div>
 <h2 class="h1 lh-condensed col-9 mt-0">More post about this project:</h2>
+</div>
 <div class="container mx-auto px-2 py-4">
   {% for post in site.posts %}
     {% if post.category contains page.category %}
